--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <main>
       <h1>
         <span>Get GeoBingo</span>
-        <img src="assets/icons/learn2.png" alt="" aria-hidden="true" />
+        <img src="../assets/icons/learn2.png" alt="" aria-hidden="true" />
       </h1>
       <p id="status">Detecting your device and taking you to the right store...</p>
       <div class="buttons">
