--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         --accent: #b496f3;
         --accent-2: #8f7cf4;
       }
-      * { box-sizing: border-box;}
+      * { box-sizing: border-box; }
       body {
         margin: 0;
         font-family: "Trebuchet MS", "Segoe UI", Tahoma, sans-serif;
@@ -98,7 +98,7 @@
         <span>Get GeoBingo</span>
         <img src="learn2.png" alt="" aria-hidden="true" />
       </h1>
-      <p id="status">Detecting your device and taking you to the right store..</p>
+      <p id="status">Detecting your device and taking you to the right store...</p>
       <div class="buttons">
         <a class="button primary" id="ios-link" href="https://apps.apple.com/be/app/geobingo/id6758577949">Open in App Store</a>
         <a class="button secondary" id="android-link" href="https://play.google.com/store/apps/details?id=com.wardvereecken.geobingo&utm_source=ig&utm_medium=social&utm_content=link_in_bio&fbclid=PAZXh0bgNhZW0CMTEAc3J0YwZhcHBfaWQMMjU2MjgxMDQwNTU4AAGnYL5eYz3vpwM3P0OPFIVzLTh9uEOQ0ifheIGUY7NhwIULelf2LS_MgAE2ZRY_aem_77sHbtjOzA5CTtj7IbKzzg">Open in Play Store</a>
